--- a/css/main.scss
+++ b/css/main.scss
@@ -216,6 +216,8 @@ main {
             text-shadow:0px 2px 1px #16a085;
             }
         svg {
+            background: transparent;
+            z-index: -1;
             height: 70px;
             position: absolute;
             float: left;
